--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="./src/main.ts"></script>
+    <script src="https://kit.fontawesome.com/92a5eef592.js" crossorigin="anonymous"></script>
   </body>
 
 </html>
